# qass

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yaml
src/: api.rs  crypto.rs  gui.rs  gui_widget.rs  hidden.rs  io.rs  login.rs  main.rs  server.rs  service.rs
