[package]
name = "qass"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Offline password manager"
repository = "https://github.com/boralg/qass"
readme = "README.md"
keywords = []
categories = []

[dependencies]
aes-gcm-siv = { version = "0.11.1", features = ["aes"] }
anyhow = "1.0.95"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.29", features = ["derive", "env"] }
csv = "1.3.1"
device_query = "3.0.1"
directories = "6.0.0"
enigo = "0.3.0"
indexmap = { version = "2.8.0", features = ["serde"] }
rand = "0.9.0"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
zeroize = "1.8.1"
