[package]
name = "qass"
version = "0.3.5"
edition = "2021"
license = "MIT"
description = "Offline password manager"
repository = "https://github.com/boralg/qass"
readme = "README.md"
keywords = []
categories = []

[features]
default = ["gui"]
headless = []
gui = ["dep:eframe"]

[dependencies]
aes-gcm-siv = { version = "0.11.1", features = ["aes"] }
anyhow = "1.0.99"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive", "env"] }
csv = "1.3.1"
device_query = "3.0.0"
directories = "6.0.0"
enigo = "0.3.0"
indexmap = { version = "2.11.0", features = ["serde"] }
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
zeroize = "1.8.1"
eframe = { version = "0.31.1", optional = true }
